# cmake-template

./: LICENSE  README.md  module.sh
config/: .gititgnore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
